# block-chop

./: .gitignore  Cargo.toml  Consensus.sol  Dockerfile  README.md  launch_system.zsh  terminate_system.zsh
message_derive/: Cargo.toml
message_derive/src/: lib.rs
src/: lib.rs
src/applications/: mod.rs
src/applications/auctions/: bid.rs  mod.rs  processor.rs  processor_settings.rs  request.rs  token.rs
src/applications/payments/: deposit.rs  mod.rs  payment.rs  processor.rs  processor_settings.rs
src/applications/pixel_war/: color.rs  coordinates.rs  mod.rs  paint.rs  processor.rs  processor_settings.rs
src/broadcast/: amendment.rs  batch.rs  compressed_batch.rs  delivery_shard.rs  entry.rs  message.rs  mod.rs  straggler.rs  test.rs
src/broker/: batch.rs  broker_settings.rs  load_batch.rs  load_broker_settings.rs  lockstep.rs  mod.rs  reduction.rs  request.rs  response.rs  submission.rs  worker.rs
src/broker/broker/: authenticate_requests.rs  broadcast_batch.rs  deliver.rs  dispatch.rs  dispatch_requests.rs  disseminate_deliveries.rs  handle.rs  handle_requests.rs  manage_batch.rs  mod.rs  process.rs  reduce_batch.rs  setup_batch.rs  submit_batch.rs
src/broker/load_broker/: broadcast_batch.rs  broadcast_batches.rs  lockstep.rs  mod.rs  submit_batch.rs
src/client/: client.rs  mod.rs
src/client/client/: handle.rs  mod.rs  request.rs  run.rs  submit_request.rs
src/client/load/: load.rs  mod.rs
src/crypto/: certificate.rs  header.rs  mod.rs
src/crypto/records/: delivery.rs  height.rs  mod.rs
src/crypto/statements/: batch_delivery.rs  batch_witness.rs  broadcast.rs  broadcast_authentication.rs  delivery.rs  mod.rs  reduction.rs  reduction_authentication.rs
src/heartbeat/: channel.rs  entry.rs  event.rs  functions.rs  holder.rs  mod.rs
src/order/: Consensus.json  bftsmart.rs  blockchain.rs  hotstuff.rs  loopback.rs  mod.rs  order.rs
src/server/: batch.rs  broker_slot.rs  deduplicator.rs  deduplicator_settings.rs  duplicate.rs  merkle_batch.rs  mod.rs  server_settings.rs  totality_manager.rs  totality_manager_settings.rs  witness_cache.rs  witness_cache_settings.rs
src/server/batches/: compressed_batch.rs  inflated_batch.rs  merkle_batch.rs  mod.rs  plain_batch.rs
src/server/server/: broker_state.rs  deliver.rs  listen.rs  mod.rs
src/system/: directory.rs  membership.rs  mod.rs  passepartout.rs  test.rs
src/total_order/: bftsmart.rs  hotstuff.rs  loopback.rs
zebra/: Cargo.toml
zebra/talk/: Cargo.toml
zebra/talk/x25519-dalek-1.2.0/: .cargo_vcs_info.json  Cargo.toml
