[package]
name = "chop-chop"
version = "0.1.0"
edition = "2021"

[lib]
name = "chop_chop"
path = "src/lib.rs"

[[bin]]
name = "generate_system"
path = "bin/generate_system.rs"
required-features = [ "benchmark" ]

[features]
benchmark = []

[dependencies]
doomstack = { git = "https://github.com/distributed-epfl/doomstack" }
talk = { git = "https://github.com/distributed-epfl/talk" }
zebra = { git = "https://github.com/distributed-epfl/zebra" }
varcram = { git = "https://github.com/distributed-epfl/varcram" }

tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
rayon = { version = "1.5.1" }
futures = { version = "0.3" }
async-trait = { version = "0.1.56" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = { version = "~1.3" }

bit-vec = { version = "0.6", features = ["serde"] }

sled = { version = "0.34.7" }

lapp = { version = "0.4.0" }
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }