[package]
name = "chop-chop"
version = "0.1.0"
edition = "2021"

[lib]
name = "chop_chop"
path = "src/lib.rs"

[[bin]]
name = "generate_system"
path = "bin/generate_system.rs"
required-features = [ "benchmark" ]

[features]
all = [ "benchmark" ]
benchmark = []

[dependencies]
message_derive = { path = "./message_derive" }

doomstack = { git = "https://github.com/distributed-epfl/doomstack" }
talk = { git = "https://github.com/distributed-epfl/talk", features = ["test_utilities"] }
zebra = { git = "https://github.com/distributed-epfl/zebra" }
varcram = { git = "https://github.com/distributed-epfl/varcram" }

tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
rayon = { version = "1.5.1" }
futures = { version = "0.3" }
async-trait = { version = "0.1.56" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = { version = "~1.3" }

bit-vec = { version = "0.6", features = ["serde"] }
oh-snap = { version = "0.0.5" }

sha-1 = { version = "0.10.0" }

sled = { version = "0.34.7" }

lapp = { version = "0.4.0" }
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }

num_cpus = { version = "1.13.1" }

rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }