[package]
name = "chop-chop"
version = "0.1.0"
edition = "2021"

[lib]
name = "chop_chop"
path = "src/lib.rs"

[[bin]]
name = "generate_system"
path = "bin/generate_system.rs"
required-features = [ "benchmark" ]

[[bin]]
name = "raw_directory"
path = "bin/raw_directory.rs"
required-features = [ "benchmark" ]

[[bin]]
name = "generate_batches"
path = "bin/generate_batches.rs"
required-features = [ "benchmark" ]

[[bin]]
name = "rendezvous"
path = "bin/rendezvous.rs"
required-features = [ "benchmark" ]

[[bin]]
name = "server"
path = "bin/server.rs"
required-features = [ "benchmark" ]

[[bin]]
name = "load_broker"
path = "bin/load_broker.rs"
required-features = [ "benchmark" ]

[features]
all = [ "benchmark" ]
benchmark = [ "dep:memmap" ]

[dependencies]
message_derive = { path = "./message_derive" }

doomstack = { git = "https://github.com/distributed-epfl/doomstack" }
talk = { git = "https://github.com/distributed-epfl/talk", features = ["test_utilities"] }
zebra = { git = "https://github.com/distributed-epfl/zebra" }
varcram = { git = "https://github.com/distributed-epfl/varcram" }

tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
rayon = { version = "1.5.1" }
futures = { version = "0.3" }
async-trait = { version = "0.1.56" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = { version = "~1.3" }

bit-vec = { version = "0.6", features = ["serde"] }
oh-snap = { version = "0.0.5" }

sha-1 = { version = "0.10.0" }

sled = { version = "0.34.7" }
memmap = { version = "0.7.0", optional = true }

lapp = { version = "0.4.0" }
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }

num_cpus = { version = "1.13.1" }

rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }

jemallocator = { version = "0.5.0" }
core_affinity = { version = "0.5.10" }

[profile.release]
lto = "fat"
codegen-units = 1